Refs #3079: fix text overflow on notes

--- a/app/assets/stylesheets/components/_panels.sass
+++ b/app/assets/stylesheets/components/_panels.sass
@@ -25,3 +25,7 @@
       background-color: transparent
       border-radius: 0
       border: none
+
+  p
+    hyphens: auto
+    word-wrap: break-word
